tests/snapshots/examples_fixtures/type_system__failing__32_direct_time_hof_missing_effect.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/32_direct_time_hof_missing_effect.flx
== compile ==
failed (compile)
== diagnostics ==
error[E056]: Wrong Number Of Arguments

The `time` function takes 0 arguments, but 1 were provided.

  examples/type_system/failing/32_direct_time_hof_missing_effect.flx:4:5
  |
1 | 
2 | 
3 | fn profiled() -> Int with IO {
4 |     time(/() -> 1)
  |     ^^^^^^^^^^^^^^
  |     -------------- 1 arguments provided here, expected 0

Help:
  Remove 1 extra argument(s), for example: `time()`.


error[E400]: Missing Effect

requires effect `Time` but the enclosing context does not provide it

  examples/type_system/failing/32_direct_time_hof_missing_effect.flx:4:5
  |
4 |     time(/() -> 1)
  |     ^^^^^^^^^^^^^^
  |     -------------- requires `Time`

Hint:
  annotate the enclosing function with `with Time`


Warning: missing CFG bytecode binding for IR call dest


Found 2 errors and 1 warning.
== stdout ==
<not executed>
