tests/snapshots/examples_fixtures/type_system__failing__33_module_qualified_effect_propagation_missing.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/33_module_qualified_effect_propagation_missing.flx
== compile ==
failed (module)
== diagnostics ==
--> compiler error[E018]: IMPORT NOT FOUND

Cannot find module `TypeSystem.EffectsChain` to import.

  --> examples/type_system/failing/33_module_qualified_effect_propagation_missing.flx:3:1
  |
3 | import TypeSystem.EffectsChain
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `TypeSystem.EffectsChain.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `TypeSystem.EffectsChain` under roots: examples/type_system/failing, src (imported from examples/type_system/failing/33_module_qualified_effect_propagation_missing.flx).
== stdout ==
<not executed>
