tests/snapshots/examples_fixtures/type_system__failing__35_pure_context_typed_pure_rejects_io.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/35_pure_context_typed_pure_rejects_io.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `print` requires effect `Console` in this function signature.

  examples/type_system/failing/35_pure_context_typed_pure_rejects_io.flx:24:5
   |
24 |     print(x)
   |     ^^^^^^^^
   |     -------- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.
== stdout ==
<not executed>
